--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@tensorflow/tfjs-node": "^4.2.0"
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs-node": "^3.21.1"
   }
 }
